public/yaml/unittests/smp-merge/istio-networking/expected/networking.istio.io_v1alpha3_serviceentry_google-api-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-api-entry
  namespace: kubeflow
spec:
  hosts:
    - www.googleapis.com
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
